--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.8",
     "dotenv": "^16.4.5",
+    "jimp": "^0.16.13",
+    "link-preview-js": "^3.0.5",
     "pino": "^9.4.0",
     "qrcode-terminal": "^0.12.0"
   }
