--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.8",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "jimp": "^0.16.13",
     "link-preview-js": "^3.0.5",
