--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "botName": "Hatsuharu",
     "version": "1.0.0",
-    "infoMenu": ["info","help"],
+    "infoMenu": ["info","help","menu"],
     "memberMenu": [],
     "premiumMenu": [],
     "adminMenu": [],
