--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,6 @@
     "memberMenu": [],
     "premiumMenu": [],
     "adminMenu": [],
+    "interactMenu": ["hatsu", "detail","talk"],
     "prefix": "$"
 }
