--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "node test"
+    "test": "node functionTester"
   },
   "author": "XNS-ivy",
   "license": "MIT",
